--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -13,4 +13,4 @@
       name: docker
       state: started
   - name: Running container
-    shell: docker run -it -d --name Calculator sriramun/calculator
+    shell: docker run -it -d --name Calculator_Sriram sriramun/calculator
